--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body ng-app="MushroomApp">
     <div ng-controller="ShroomyCtrl">
         <div>
-            <h1>{{shroomy}}</h1>
+            <h1>Test</h1>
         </div>
     </div>
 
